@startuml

'''classes

class Identite{

    - nip : String;
    - nom : String;
    - prenom : String;
    + getNip() : String;
    + getNom() : String;
    + getPrenom() : String;

}

class Etudiant{
    - notes : Map<String, ArrayList<Float>>;

    + ajouterNote(String m, float note);
    + calculMoyenne(String m) : float;
    + calculMoyenneG() : float;


}

class Formation{
    - identifiant : int
    - coefficientsMatieres : Map<String, Float>>

    + ajouterMatiere(String m, float coeff);
    + supprimerMatiere(String m);

}

class Groupe{

    + ajouterEtudiant(Etudiant e);
    + supprimerEtudiant(Etudiant e);
    + calculMoyenne(String m) : int;
    + calculMoyenneG() : int;
    + triParMerite();
    + triAlpha();

}


Groupe --> Etudiant : - etudiants
Etudiant --> Identite : - identite
Etudiant --> Formation : - formationEtudiant
Groupe --> Formation : - formation
@enduml
